<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.streamroot.lumen.delivery.client.samples.theoplayer.MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/lumen_logo"
        android:contentDescription="@string/logo_cd" />

    <LinearLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dcKeyTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dc_key_text" />

            <AutoCompleteTextView
                android:id="@+id/dcKeyET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dc_key_hint"
                android:inputType="text"
                android:text="@string/streamroot_key_prefill" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/streamLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/streamTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stream_url_text" />

            <AutoCompleteTextView
                android:id="@+id/streamET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/stream_url_hint"
                android:inputType="text"
                android:text="@string/stream_url_prefill" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/propertyTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mesh_property_text" />

            <AutoCompleteTextView
                android:id="@+id/propertyET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mesh_property_hint"
                android:inputType="text"
                android:text="@string/mesh_property_prefill" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/launchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_demo_text"
        />

    <TextView
        android:id="@+id/dcPlayerVersions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="7sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dc_deeplink"
        android:textSize="7sp"
        android:gravity="center"/>

</LinearLayout>
